<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import
            type="com.commondata.util.TransformUtil" />

        <variable
            name="person"
            type="com.commondata.bean.PersonBean" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="203dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="21dp"
                android:src="@mipmap/ic_head_normal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:text="@{person.name}"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:background="@drawable/linearlayout_corner_bg"
                android:padding="4dp"
                android:text="@{TransformUtil.personAttrsTransform(person.personAttr)}"
                android:textSize="13sp"
                android:textStyle="bold"
                android:textColor="#ffffff"/>
        </LinearLayout>
        <View
            style="@style/style_flow_people_8_dp_height_split_line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/basic_info"
                android:textColor="@color/blue_500"/>

            <View
                style="@style/style_flow_people_1_ps_line_grey_no_margin"/>

            <LinearLayout style="@style/style_person_info_ll">
                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@string/ID_card_No"
                    android:textColor="@color/bg_person_info_gray"/>

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@string/nation"
                    android:textColor="@color/bg_person_info_gray"/>
            </LinearLayout>

            <LinearLayout style="@style/style_person_info_ll">

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@{person.idNum}"/>

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@{person.nationName}"/>
            </LinearLayout>

            <LinearLayout style="@style/style_person_info_ll">

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@string/date_of_birth"
                    android:textColor="@color/bg_person_info_gray"/>

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@string/stature"
                    android:textColor="@color/bg_person_info_gray"/>
            </LinearLayout>

            <LinearLayout style="@style/style_person_info_ll">

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@{TransformUtil.TimeStampDate(person.birthday)}"/>

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@{person.height}"/>
            </LinearLayout>

            <LinearLayout style="@style/style_person_info_ll">

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@string/bloodType"
                    android:textColor="@color/bg_person_info_gray"/>

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@string/eduLevel"
                    android:textColor="@color/bg_person_info_gray"/>
            </LinearLayout>

            <LinearLayout style="@style/style_person_info_ll">

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@{TransformUtil.bloodTransform(Integer.parseInt(person.bloodType))}"/>

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@{person.eduLevelName}"/>
            </LinearLayout>

            <LinearLayout style="@style/style_person_info_ll">

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@string/marriage"
                    android:textColor="@color/bg_person_info_gray"/>

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@string/political"
                    android:textColor="@color/bg_person_info_gray"/>
            </LinearLayout>

            <LinearLayout style="@style/style_person_info_ll">

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@{TransformUtil.marriageTransformString(Integer.parseInt(person.marriageStatus))}"/>

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@{person.politicalStatusName}"/>
            </LinearLayout>

            <LinearLayout style="@style/style_person_info_ll">

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@string/workPlace"
                    android:textColor="@color/bg_person_info_gray"/>

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@string/careers"
                    android:textColor="@color/bg_person_info_gray"/>
            </LinearLayout>

            <LinearLayout style="@style/style_person_info_ll">

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@{person.workPlace}"/>

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@{person.careersName}"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:text="@string/householdPolice"
                android:textColor="@color/bg_person_info_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:text="@{person.householdAddress}"/>


            <LinearLayout style="@style/style_person_info_ll">

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@string/householdArea"
                    android:textColor="@color/bg_person_info_gray"/>

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@string/householdAreaTel"
                    android:textColor="@color/bg_person_info_gray"/>
            </LinearLayout>

            <LinearLayout style="@style/style_person_info_ll">

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@{person.householdAreaName}"/>

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@{person.householdAreaTel}"/>
            </LinearLayout>

            <LinearLayout style="@style/style_person_info_ll">

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@string/community"
                    android:textColor="@color/bg_person_info_gray"/>

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@string/community_tel"
                    android:textColor="@color/bg_person_info_gray"/>
            </LinearLayout>

            <LinearLayout style="@style/style_person_info_ll">

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@{person.communityName}"/>

                <TextView
                    style="@style/style_person_info_tv"
                    android:text="@{person.communityTel}"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</layout>